--- a/src/taskify/taskify.module.css
+++ b/src/taskify/taskify.module.css
@@ -68,3 +68,23 @@ form{
     transform: scale(0.6);
     box-shadow: 0 0 15px black;
 }
+
+.todo_single{
+    width: 50vw;
+    padding: 10px;
+    margin: 10px;
+    background-color: aquamarine;
+    position: relative;
+    
+}
+
+.todo_single form{
+    max-width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.icon:hover{
+    transform: scale(1.1);
+}
